[package]
name = "escrow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
solana-sdk = "2.0.15"
solana-client = "2.0.15"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
shellexpand = "3.0"